--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/Calculate/EducationFund.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/Calculate/EducationFund.cshtml
@@ -1630,21 +1630,6 @@
                     // 判斷試算結果是否有缺口
                     if (resultHasGap) {
                         $(".tab1Btn").removeClass("u-hidden");
-                        $(".tab2Btn").addClass("u-hidden");
-                        $(".tab3Btn").addClass("u-hidden");
-                        $(".tab4Btn").addClass("u-hidden");
-                        $(".tab5Btn").removeClass("u-hidden");
-
-                        tab1Results = planningResults;
-                        tab5Results = planningCompute(years, amountPrepared, monthlyInvestment, (parseFloat(expectedRoi) + parseFloat(defaultRiskAttributes)).toString());
-
-                        renderResultTab1(tab1Results, educationalFund, years, amountPrepared, monthlyInvestment, expectedRoi);
-                        renderResultTab5(tab5Results, educationalFund, years, amountPrepared, monthlyInvestment, (parseFloat(expectedRoi) + parseFloat(defaultRiskAttributes)).toString());
-
-                        currentYear = new Date().getFullYear() + parseFloat($("#years").val()) - 1;
-                    }
-                    else {
-                        $(".tab1Btn").removeClass("u-hidden");
                         $(".tab2Btn").removeClass("u-hidden");
                         $(".tab3Btn").removeClass("u-hidden");
                         $(".tab4Btn").removeClass("u-hidden");
@@ -1661,6 +1646,21 @@
                         renderResultTab4(tab4Results, educationalFund, amountPrepared, monthlyInvestment, expectedRoi);
 
                         currentYear = new Date().getFullYear() + tab4Results - 1;
+                    }
+                    else {
+                        $(".tab1Btn").removeClass("u-hidden");
+                        $(".tab2Btn").addClass("u-hidden");
+                        $(".tab3Btn").addClass("u-hidden");
+                        $(".tab4Btn").addClass("u-hidden");
+                        $(".tab5Btn").removeClass("u-hidden");
+
+                        tab1Results = planningResults;
+                        tab5Results = planningCompute(years, amountPrepared, monthlyInvestment, (parseFloat(expectedRoi) + parseFloat(defaultRiskAttributes)).toString());
+
+                        renderResultTab1(tab1Results, educationalFund, years, amountPrepared, monthlyInvestment, expectedRoi);
+                        renderResultTab5(tab5Results, educationalFund, years, amountPrepared, monthlyInvestment, (parseFloat(expectedRoi) + parseFloat(defaultRiskAttributes)).toString());
+
+                        currentYear = new Date().getFullYear() + parseFloat($("#years").val()) - 1;
                     }
 
                     // 顯示所有圓餅圖
@@ -1700,12 +1700,6 @@
                     let monthlyInvestment = $("#monthlyInvestment_Popup").val();
                     let expectedRoi = $("#expectedRoi_Popup").val();
 
-                    $("#educationalFund_Popup").val(educationalFund);
-                    $("#years_Popup").val(years);
-                    $("#amountPrepared_Popup").val(amountPrepared);
-                    $("#monthlyInvestment_Popup").val(monthlyInvestment);
-                    $("#expectedRoi_Popup").val(expectedRoi);
-
                     // 試算結果
                     let planningResults = planningCompute(years, amountPrepared, monthlyInvestment, expectedRoi);
 
@@ -1725,21 +1719,6 @@
                     // 判斷試算結果是否有缺口
                     if (resultHasGap) {
                         $(".tab1Btn").removeClass("u-hidden");
-                        $(".tab2Btn").addClass("u-hidden");
-                        $(".tab3Btn").addClass("u-hidden");
-                        $(".tab4Btn").addClass("u-hidden");
-                        $(".tab5Btn").removeClass("u-hidden");
-
-                        tab1Results = planningResults;
-                        tab5Results = planningCompute(years, amountPrepared, monthlyInvestment, (parseFloat(expectedRoi) + parseFloat(defaultRiskAttributes)).toString());
-
-                        renderResultTab1(tab1Results, educationalFund, years, amountPrepared, monthlyInvestment, expectedRoi);
-                        renderResultTab5(tab5Results, educationalFund, years, amountPrepared, monthlyInvestment, (parseFloat(expectedRoi) + parseFloat(defaultRiskAttributes)).toString());
-
-                        currentYear = new Date().getFullYear() + parseFloat($("#years").val()) - 1;
-                    }
-                    else {
-                        $(".tab1Btn").removeClass("u-hidden");
                         $(".tab2Btn").removeClass("u-hidden");
                         $(".tab3Btn").removeClass("u-hidden");
                         $(".tab4Btn").removeClass("u-hidden");
@@ -1755,10 +1734,24 @@
                         renderResultTab3(tab3Results, educationalFund, years, amountPrepared, monthlyInvestment);
                         renderResultTab4(tab4Results, educationalFund, amountPrepared, monthlyInvestment, expectedRoi);
 
-                        currentYear = new Date().getFullYear() + tab4Results - 1;
+                        currentYear = new Date().getFullYear() + tab4Results - 1;                    }
+                    else {
+                        $(".tab1Btn").removeClass("u-hidden");
+                        $(".tab2Btn").addClass("u-hidden");
+                        $(".tab3Btn").addClass("u-hidden");
+                        $(".tab4Btn").addClass("u-hidden");
+                        $(".tab5Btn").removeClass("u-hidden");
+
+                        tab1Results = planningResults;
+                        tab5Results = planningCompute(years, amountPrepared, monthlyInvestment, (parseFloat(expectedRoi) + parseFloat(defaultRiskAttributes)).toString());
+
+                        renderResultTab1(tab1Results, educationalFund, years, amountPrepared, monthlyInvestment, expectedRoi);
+                        renderResultTab5(tab5Results, educationalFund, years, amountPrepared, monthlyInvestment, (parseFloat(expectedRoi) + parseFloat(defaultRiskAttributes)).toString());
+
+                        currentYear = new Date().getFullYear() + parseFloat($("#years").val()) - 1;
                     }
 
-                    // tab active 狀態復原
+                    //#region 綁定TabSwitch事件
                     function bindTabSwitchEvent() {
                         $("ul.c-tab__navs a:first").off("click.myEvent").on("click.myEvent", function (event) {
                             event.preventDefault();
@@ -1859,6 +1852,7 @@
                         // 觸發第一次點擊事件
                         $("ul.c-tab__navs a:first").trigger("click.myEvent");
                     }
+                    //#endregion
 
                     bindTabSwitchEvent();
 
@@ -2088,16 +2082,16 @@
                 if (result >= educationalFundVal) {
                     InsufficientAmountVal = 0;
                     InsufficientAmountFormatVal = "0";
-                    resultHasGap = true;
+                    resultHasGap = false;
                 } else {
                     InsufficientAmountVal = educationalFundVal - result;
                     InsufficientAmountFormatVal = (InsufficientAmountVal).toLocaleString();
-                    resultHasGap = false;
+                    resultHasGap = true;
                 }
 
                 $("#resultContent").html(`我目標教育基金 ${educationalFundFormatVal} 元，投資 ${years} 年後尚不足<span class='t1 t-warning u-nowrap'> ${InsufficientAmountFormatVal} 元</span>`);
 
-                if (!resultHasGap) {
+                if (resultHasGap) {
                     $("#resultSuccessMain").addClass("u-hidden");
                     $("#resultUnsuccessfulMain").removeClass("u-hidden");
                     current = result;
