--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/Calculate/EducationFund.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/Calculate/EducationFund.cshtml
@@ -1734,7 +1734,8 @@
                         renderResultTab3(tab3Results, educationalFund, years, amountPrepared, monthlyInvestment);
                         renderResultTab4(tab4Results, educationalFund, amountPrepared, monthlyInvestment, expectedRoi);
 
-                        currentYear = new Date().getFullYear() + tab4Results - 1;                    }
+                        currentYear = new Date().getFullYear() + tab4Results - 1;
+                    }
                     else {
                         $(".tab1Btn").removeClass("u-hidden");
                         $(".tab2Btn").addClass("u-hidden");
