--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/FundDetail/FundDetailDomestic.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/FundDetail/FundDetailDomestic.cshtml
@@ -3764,6 +3764,7 @@
                     const params = {
                         fundId: fundId,
                         selectType: 'Type',
+                        indicator : 'D'
                     };
                     if (chart) {
                         chart.showLoading();
