--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/FundDetail/FundDetailOverseas.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/FundDetail/FundDetailOverseas.cshtml
@@ -3817,6 +3817,7 @@
                     const params = {
                         fundId: fundId,
                         selectType: type,
+                        indicator: 'O'
                     };
                     if (chart) {
                         chart.showLoading();
