Fix：近一年各月報酬率差額

--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/ETFDetail/_Performance.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/ETFDetail/_Performance.cshtml
@@ -702,8 +702,7 @@
                                         <td>差額</td>
                                         @foreach (var item in Model.ETFNetWorthMonthlyReturn)
                                         {
-                                            <td><span>@item.Difference</span></td>
-
+                                            <td @item.DifferenceStyle><span>@item.Difference</span></td>
                                         }
                                     </tr>
                                 </tbody>
