Fix：ETF詳細頁上方固定資訊市價取小數點後四位

--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/ETFDetail/EtfDetailIndex.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/ETFDetail/EtfDetailIndex.cshtml
@@ -60,7 +60,7 @@
                                             <span>市價</span>
                                         </div>
                                         <div class="c-numerical__content c-numerical__content--xl u-left@dt-only">
-                                            <span>@etfData.BasicMarketPrice.FormatDecimalNumber()</span>
+                                            <span>@etfData.BasicMarketPrice.FormatDecimalNumber(4)</span>
                                             <span class="t-unit">@etfData.BasicQuoteCurrency</span>
                                         </div>
                                     </div>
