--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/FundSearch/FundSearch.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/FundSearch/FundSearch.cshtml
@@ -1746,33 +1746,36 @@
         }
 
         function QueryStringSearch() {
-            var urlParams = new URLSearchParams(window.location.search);
-            var hotkeyword = DOMPurify.sanitize(urlParams.get('HotKeyWord'));
-            var hotproduct = DOMPurify.sanitize(urlParams.get('HotProduct'));
-            var keyword = DOMPurify.sanitize(urlParams.get('keyword'));
+            let keywordObject = {};
 
-            if (hotkeyword) {
+            let urlParams = new URLSearchParams(window.location.search);
+
+            for (const [key, value] of urlParams) {
+                keywordObject[key.toLowerCase()] = DOMPurify.sanitize(decodeURIComponent(value));
+            }
+
+            if (keywordObject['hotkeyword']) {
                 $("#hotkey_criteria input[type='checkbox']").each(function () {
                     var checkboxValue = $(this).val();
 
-                    if (hotkeyword === checkboxValue) {
+                    if (keywordObject['hotkeyword'] === checkboxValue) {
                         $(this).trigger('click');
                         return false;
                     }
                 });
             }
-            else if (hotproduct) {
+            else if (keywordObject['hotproduct']) {
                 $("#hotproducts_criteria input[type='checkbox']").each(function () {
                     var checkboxValue = $(this).val();
 
-                    if (hotproduct === checkboxValue) {
+                    if (keywordObject['hotproduct'] === checkboxValue) {
                         $(this).trigger('click');
                         return false;
                     }
                 });
             }
-            else if (keyword) {
-                $('[data-keyword-input]').val(keyword);
+            else if (keywordObject['keyword']) {
+                $('[data-keyword-input]').val(keywordObject['keyword']);
                 $("[data-keyword-submit]").trigger('click');
             }
         }
