--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/StructuredProduct/StructuredProductSearch.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/StructuredProduct/StructuredProductSearch.cshtml
@@ -496,18 +496,23 @@
                         initFilter(data);
                         initAutocomplete(data);
 
-                        var urlParams = new URLSearchParams(window.location.search);
-                        var keyword = DOMPurify.sanitize(urlParams.get('keyword'));
-                        var hotkeyword = DOMPurify.sanitize(urlParams.get('HotKeyWord'));
-                        var hotproduct = DOMPurify.sanitize(urlParams.get('HotProduct'));
+                        let keywordObject = {};
 
-                        if (keyword) {
-                            $('[data-keyword-input]').val(keyword);
+                        let urlParams = new URLSearchParams(window.location.search);
+
+                        for (const [key, value] of urlParams) {
+                            keywordObject[key.toLowerCase()] = DOMPurify.sanitize(decodeURIComponent(value));
+                        }
+
+                        if (keywordObject['keyword']) {
+                            $('[data-keyword-input]').val(keywordObject['keyword']);
                             $('[data-keyword-submit]').trigger('click');
-                        } else if (hotproduct) {
-                            $("input[value='" + hotproduct + "']").trigger('click');
-                        } else if (hotkeyword) {
-                            $("input[value='" + hotkeyword + "']").trigger('click');
+                        }
+                        else if (keywordObject['hotproduct']) {
+                            $("input[value='" + keywordObject['hotproduct'] + "']").trigger('click');
+                        }
+                        else if (keywordObject['hotkeyword']) {
+                            $("input[value='" + keywordObject['hotkeyword'] + "']").trigger('click');
                         }
                     }
                     else {
